--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1"
   }
