--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "dist/index.d.ts",
   "description": "Paystack API library to manage payments.",
   "scripts": {
-    "check": "bunx @biomejs/biome check --write src/index.ts",
+    "check": "bunx biome check --write src test",
     "test": "bun test",
     "build": "bun run build.mjs",
     "prepublishOnly": "bun run build"
