--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,76 @@
 name: CI
 
+permissions:
+  contents: write
+
 on:
   push:
     branches:
       - main
 
-  pull_request:
-    branches:
-      - main
-
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-      fail-fast: false
+  # 1
+  test_and_release:
+    runs-on: ubuntu-latest
 
     steps:
-      - id: checkout
-        name: Checkout
-        uses: actions/checkout@v3
-      - id: setup-bun
-        name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
-      - id: install-deps
-        name: Install dependencies
+
+      - name: Install Dependencies
         run: |
           bun install
-      - id: test
-        name: Run test
-        run: |
-          bun test
+          bun add next react react-dom
+          bun install --global bun-doc
+
+      - name: Format and Lint
+        run: bun run check
+
+      - name: Run Test
+        run: bun test
+
+      - name: Check Conventional Commit and Release
+        uses: cocogitto/cocogitto-action@v3
+        id: cocogitto
+        with:
+          release: true
+          git-user: 'Irabeny89'
+          git-user-email: 'irabeny89@gmail.com'
+
+      - name: Clean The Package
+        run: rm -f ./tsconfig.json; rm -rf ./docs
+      
+      - name: Build Documentation Page
+        run: bun-doc build; npx next build && npx next export; mv ./out ./docs
+
+      - name: Deploy Documentation Page 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: docs
+
+      # The version number is accessible as a github action output
+      - name: Print Version
+        run: "echo '${{ steps.cocogitto.outputs.version }}'"
+
+      - name: Generate Changelog
+        run: cog changelog --at ${{ steps.cocogitto.outputs.version }} -t full_hash > GITHUB_CHANGELOG.md
+
+      - name: Upload Github Release 🚀
+        id: gh-release
+        uses: softprops/action-gh-release@v2
+        with:
+          body_path: GITHUB_CHANGELOG.md
+          tag_name: ${{ steps.cocogitto.outputs.version }}
+
+      - name: Github Release URL
+        run: echo "Github release link ${{ steps.gh-release.outputs.url }}"
+          
+      - name: Publish To JSR
+        run: bun run publish
