--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,11 @@ jobs:
           git-user: 'Irabeny89'
           git-user-email: 'irabeny89@gmail.com'
 
+      
+      # The version number is accessible as a github action output
+      - name: Print Version
+        run: "echo '${{ steps.cocogitto.outputs.version }}'"
+          
       - name: Clean The Package
         run: rm -f ./tsconfig.json; rm -rf ./docs
       
@@ -54,10 +59,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: docs
-
-      # The version number is accessible as a github action output
-      - name: Print Version
-        run: "echo '${{ steps.cocogitto.outputs.version }}'"
 
       - name: Generate Changelog
         run: cog changelog --at ${{ steps.cocogitto.outputs.version }} -t full_hash > GITHUB_CHANGELOG.md
@@ -72,5 +73,5 @@ jobs:
       - name: Github Release URL
         run: echo "Github release link ${{ steps.gh-release.outputs.url }}"
           
-      - name: Publish To JSR
+      - name: Publish To JSR 🚀
         run: bun run publish
