build: update github action workflow file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         uses: cocogitto/cocogitto-action@v3
         id: cocogitto
         with:
+          check-latest-tag-only: true
           release: true
           git-user: 'Irabeny89'
           git-user-email: 'irabeny89@gmail.com'
