--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,18 @@ on:
     branches:
       - main
 
+  pull_request: 
+    branches: 
+      - main
+
 jobs:
   # 1
-  test:
+  test_and_publish:
+    name: Run Tests And Publish To JSR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -31,45 +34,21 @@ jobs:
       - name: Test Code
         run: bun test
 
+      - name: Publish To JSR
+        run: bun run publish
+
   # 2
-  build-and-deploy-docs:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Clean The Package
-        run: rm -f ./tsconfig.json; rm -rf ./docs
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-      
-      - name: Install Dependencies
-        run: |
-          bun add next react react-dom
-          bun install --global bun-doc
-
-      - name: Build Documentation Page
-        run: |
-          bun-doc build
-          bunx next build && bunx next export
-          mv ./out ./docs
-
-      - name: Deploy Documentation Page
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: docs
-
-  # 3
-  commit-and-changelog:
-    needs: test
+  changelog_release:
+    name: Check Commit, Generate Changelog and Upload Release On Github
+    needs: test_and_publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          # pick the pr HEAD instead of the merge commit
+          ref: ${{ github.event.pull_request.head.sha }}
           
       - name: Conventional Commit Check
         uses: cocogitto/cocogitto-action@v3
@@ -81,22 +60,17 @@ jobs:
           release: true
           git-user: 'irabeny89'
           git-user-email: 'irabeny89@gmail.com'
-
+          
       # The version number is accessible as a github action output
       - name: Print Version
         run: "echo '${{ steps.release.outputs.version }}'"
 
+      - name: Generate Changelog
+        run: cog changelog --at ${{ steps.release.outputs.version }} -t full_hash > GITHUB_CHANGELOG.md  
+          
       - name: Upload Github Release
         id: gh-release
         uses: softprops/action-gh-release@v2
         with:
           body_path: GITHUB_CHANGELOG.md
           tag_name: ${{ steps.release.outputs.version }}
-        
-  # 4
-  publish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Publish To JSR
-        run: bun run publish
