fix(ci): allow dirty flag on publish

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: bun test
 
       - name: Publish To JSR
-        run: bun run publish
+        run: bunx jsr publish --allow-dirty
 
   # 2
   changelog_release:
