--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -41,9 +42,19 @@ jobs:
       - name: Test Code
         run: bun test
 
-      - name: Bump Version
-        run: bun bump-version.ts
+      - name: Get Next Version
+        id: get_next_version
+        uses: thenativeweb/get-next-version@main
 
+      - name: Update Version If Available
+        if: steps.get_next_version.outputs.hasNextVersion
+        run: |
+          echo updating version in files
+          NEXT_VERSION=${{ steps.get_next_version.outputs.version }} bun bump-version.ts
+
+          echo "generating changelog"
+          cog changelog
+        
       - name: Check For Changes
         id: check_changes
         run: |
@@ -62,10 +73,8 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
 
-          cog changelog
-
           git add .
-          git commit -m "chore: version auto bump"
+          git commit -m "chore: version auto bump -> ${{ steps.get_next_version.outputs.version }}"
           git push origin main
 
       - name: Publish To JSR
