--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "Paystack API library to manage payments.",
   "scripts": {
     "check": "bunx biome check --write src test",
-    "test": "bun test",
+    "test-utils": "bun test test/utils",
+    "test-feats": "bun test test/features",
     "build": "bun run build.mjs",
     "publish": "bunx jsr publish",
     "test-publish": "bunx jsr publish --dry-run",
